Vista/css/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');

* {
    --color-page: #ffffff;
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
    box-sizing: border-box;
}

html {
    min-height: 100%;
    position: relative;
}

body {
    margin: 0;
    margin-bottom: 10%;
    background-image: url("fondo.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

a {
    text-decoration: none;
    color: #558FD2;
    outline: none;
}

.header {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    justify-content: space-around;
    background-color: var(--color-page);
    color: white;
    font-size: 14px;
    box-shadow: 2px 2px 6px 2px rgba(0,0,0,0.4) ;
}

.header, .center-header, .info-user, .header-left, .container, .body-container {
    display: flex;
    align-items: center;
    color: rgb(0, 0, 0);
    text-decoration: black;
}

.body-container {
    margin: 0 15% 0 15%;
}

.body-container p {
    padding: 1%;
    background-color: rgba(255, 255, 255, 0.7);
    color: black;
    border-radius: 4px;
    text-align: justify;
}

.body-container h1 {
    margin: 0;
}

.header .center-header {
    flex: 1 1 auto;
}

.showheader {
    padding: 0 40% 0 40%;
    flex-wrap: wrap;
}

.bar-search button,.bar-search input{
    display: inline-block;
}

.bar-search button{
    border: none;
    background-color: white;
    cursor: pointer;
}

.bar-search input {
    border: none;
    outline: none;
}

.header .center-header .bar-search a{
    background-color: white;
    text-align: center;
}

.header .logo, .navigation ul li, .info-user p {
    display: inline-block;
}

.menu-icon i{
    font-size: 30px;
    color: black;
    cursor: pointer;
}

.menu-icon{
    display: none;
    padding-top: 3.8%;

}

.header .header-left .center-header, .container , .body-container{
    flex-direction: column;
    flex: 1 1 auto;
}

.header .header-left .center-header .navigation {
    width: 350px;
}

.header .header-left {
    flex-direction: row;
}

.navigation ul li {
    padding: 2%;
}

.navigation li:hover, .inicio-button:hover {
    background-color: #ddd; 
    border-radius: 15px;
}

.inicio-button {
    text-align: center;
    padding: 6px 5px;
}

.container {
    margin-top: 6%;
    margin-bottom: 1%;
}

.container h1 {
    font-size: 3em;
    color: white
}
.container-about {
    margin-left: 2%;
    margin-right: 2%;
    background-color: rgba(255, 255, 255, 0.7);
    color: black;
    border-radius: 10px;
}

.footer {
    width: 100%;
    background-color: rgb(248, 238, 19);
    padding: 1%;
    text-align: center;
}

.footer-head {
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

.close-sesion {
    border-radius: 15px;
    display: block;
    text-align:center;
}

.button-admin {
    border: none;
    padding: 10px;
    border-radius: 10px;
    color: #FFF;
    cursor: pointer;
}

.table-admin {
    width: 100%;
    border-collapse: collapse;
    border-radius: 35px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.table-admin tr {
    text-align: center;
}

.table-admin tr th {
    color: #FFF;
    background-color: #212529;
}

.table-admin tr td, tr th {
    padding: 12px 15px;
}

.table-admin tr td {
    color: #000;
    background-color: #E9ECEF;
    border-top: 2px solid #F7F7F9;
}

.content-messages {
    margin: 6% auto;
    text-align: center;
    line-height: 120px;
}

.messages {
    color: white;
    text-align: center;
    line-height: 120px;
    font-weight: bold;
    font-size: 4rem;
    white-space: pre-line;
}

.form-register,
.form-login,
.form-save {
    min-width: 300px;
    max-width: 400px;
    border: 1px solid #E1E1E1;
    border-radius: 15px;
    padding: 2%;
    margin: 2% auto;
    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 1px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
    background-color: rgba(255, 255, 255, 0.815);
}

label,
input, select {
    display: block;
    width: 90%;
}

.form-register label, .form-login label, .form-save label, .form-register input,.form-login input,.form-save input, .form-register button, .form-login button, .form-save button, .form-save select {
    padding: 10px;
}

.form-login {
    display: flex;
    flex-direction: column;
    padding: 1% 2%;
    margin-top: 0;
}

.form-login span {
    padding-top: 10px;
    text-align: center;
}

.form-login button {
    width: 97%;
}

.container button {
    margin-top: 10px;
    font-size: 16px;
}

.form-save {
    margin-top: 0;
    padding: 8px 2%;
}

.form-save label, .form-save input, .form-save select, .form-save option {
    padding: 6px;
}

.button-success {
    background: rgb(24, 202, 0);
}

.button-danger {
    background: rgb(0, 148, 148);
    display: block;
    text-align: center;
}

.button-google {
    background: rgb(25, 0, 255);
}

.btn-hover:hover {
    background: rgb(58, 59, 60, 0.4);
}

.content-btncar {
    padding: 1% 0;
}

.button-car {
    display: block;
    text-align: center;
}

.button-back {
    background-color: rgb(255, 255, 255);
    color: black;
}
.button-red{
    background-color: rgb(252, 94, 94);
    color: white;
}

.frm_input_tbox {
    border-radius: 30px;
}

.lnk_olvidecontrasenia {
    padding-right: 20px;
    color: #000;
    font-size: small;
    text-align: right;
    outline: none;
}

.container-button {
    display: block;
    padding: 1.5% 0;
}

.crcAbout {
    padding: 0% 6% 0 6%;
    text-align: justify;
}

.crcAbout h2 {
    padding: 2% 0 2% 0;
    text-align: center;
}

.crcAbout .content-map {
    margin: 0 auto;
    padding: 1% 2%;
}

.lbl-usuario {
    color: #000000;
}

.video {
    padding: 4% 2% 2% 2%;
}

.video-content {
    border-radius: 10px;
}

#map{
    width: 100%;
    height: 400px;
    border-radius: 10px;
}

.link-social a {
    color: black;
    transition: color .3s;
    font-size: 20px;
}

.link-social a:hover {
    text-decoration: none;
    color: #A49169;
}

@media screen and (max-width:906px){
    .navigation ul, .inicio-button {
        display: none;
    }
    .menu-icon {
        display: block;
    }
    .navigation ul.show {
        display: block;
    }
    .navigation ul.show li {
        display: block;
    }
    .table-admin {
        display: block;
        overflow-x: auto;
    }
}
@media screen and (max-width:797px){
    .center-header , .header .header-left .center-header .navigation{
        width: 100px;
    }
    .messages {
        font-size: 2.5rem;
        line-height: 60px;
    }
    #map{
   
        height: 350px;
    }
}
@media screen and (max-width:512px){
    .bar-search {
        display: none;
    }
    .video-content {
        padding: 0;
        width: 380px;
        height: 200px;
    }
    .container h1 {
        font-size: 2em;
        text-align: center;
    }
    .messages {
        font-size: 2rem;
        line-height: 60px;
    }
    #map{
      
        height: 360px;
    }
}
@media screen and (max-width:412px){
    .video-content {
        padding: 0;
        width: 280px;
        height: 200px;
    }
    .form-save {
        min-width: 100px;
        max-width: 280px;
    }
    #map{
      
        height: 160px;
    }
}
@media screen and (max-width:300px){
    .video-content {
        padding: 0;
        width: 180px;
        height: 120px;
    }
    .form-save {
        min-width: 100px;
        max-width: 220px;
    }
    #map{
        width: 80px;
        height: 60px;
    }
}
@media screen and (max-width:282px){
    .video-content {
        padding: 0;
        width: 80px;
        height: 60px;
    }
    .form-save {
        min-width: 100px;
        max-width: 195px;
    }
}

